--- a/src/mindfullm/popup/index.html
+++ b/src/mindfullm/popup/index.html
@@ -22,6 +22,7 @@
         </script> -->
         <!-- end external modules -->
                 
+        <script src="../modules/mapping.js"></script>
         <script src="../modules/store.js"></script>
         <script src="scripts/settings.js"></script>
         <script src="scripts/actions.js"></script>
